fix that plans created from templates did not adjust the start/end dates for shifts

--- a/public/stylesheets/plan.css
+++ b/public/stylesheets/plan.css
@@ -2,13 +2,13 @@
   background: url(/images/icons/cog.png) no-repeat 15px 10px;
   padding-left: 40px;
 }
-form #template_options {
+form #copy_from_options {
   display: none;
 }
-form #template_options div {
+form #copy_from_options div {
   margin-left: 72px;
 }
-form #template_options label {
+form #copy_from_options label {
   margin-left: 5px;
 }
 
